Upgrade OpenTelemetry baseline and restore agent auto-configuration (#41)
* Enable Kafka trace correlation for Spark streaming

* Address review feedback for agent auto-configuration

---------

Co-authored-by: patrickpok <patrickpok@nvidia.com>